fix collapse feature

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,16 @@
 nav {
-    height: 50px;
+    height: 55px;
 }
 
-li:hover {
+.nav-link {
+    border-top: 3px solid transparent;
+    border-bottom:3px solid transparent;
+}
+
+.nav-link:hover {
     border-top: 3px solid cyan;
-    border-bottom: 3px solid transparent;
+    color: cyan;
+    border-bottom:3px solid transparent;
 }
 
 #hosto-slider {
@@ -12,6 +18,18 @@ li:hover {
 }
 #hosto-slider img {
     height: 300px;
+}
+
+.carousel {
+    position:absolute;
+    top:0;    
+}
+
+.navbar {
+    position:absolute;
+    /* top:30px; */
+    z-index: 10;
+    width:100%;
 }
 
 
